gcc/testsuite/gdc.test/compilable/dtoh_AliasDeclaration_98.d
/*
REQUIRED_ARGS: -HC=verbose -extern-std=c++98 -o-
TEST_OUTPUT:
---
// Automatically generated by Digital Mars D Compiler v$n$

#pragma once

#include <assert.h>
#include <stddef.h>
#include <stdint.h>
#include <math.h>

#ifdef CUSTOM_D_ARRAY_TYPE
#define _d_dynamicArray CUSTOM_D_ARRAY_TYPE
#else
/// Represents a D [] array
template<typename T>
struct _d_dynamicArray final
{
    size_t length;
    T *ptr;

    _d_dynamicArray() : length(0), ptr(NULL) { }

    _d_dynamicArray(size_t length_in, T *ptr_in)
        : length(length_in), ptr(ptr_in) { }

    T& operator[](const size_t idx) {
        assert(idx < length);
        return ptr[idx];
    }

    const T& operator[](const size_t idx) const {
        assert(idx < length);
        return ptr[idx];
    }
};
#endif

template <typename T, typename U>
struct TS final
{
    TS()
    {
    }
};

// Ignored dtoh_AliasDeclaration_98.TSD because `using` declarations require C++ 11
---
*/

extern(C++):

struct TS(T, U) {}
alias TSD = TS;
